--- a/package.json
+++ b/package.json
@@ -3,16 +3,12 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "node server.js"
   },
   "dependencies": {
-    "body-parser": "^1.18.3",
-    "cookie-parser": "~1.4.3",
-    "cors": "^2.8.4",
     "express": "^4.16.3",
     "socket.io": "^2.0.4"
   },
   "devDependencies": {
-    "nodemon": "^1.18.3"
   }
 }
